<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
     android:background="@color/color_ll_background" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bt_border_off"
        android:orientation="vertical"
        android:padding="5dp" >
        
        <TextView
            android:id="@+id/tvHelpVersion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/help_version"
            android:textColor="@color/color_bleu"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/help_reso"
            android:textColor="@color/color_jaune"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/help_decay"
            android:textColor="@color/color_jaune"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/help_link"
            android:textColor="@color/color_jaune"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/help_field"
            android:textColor="@color/color_jaune"/>
		<TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/help_mod"
            android:textColor="@color/color_jaune"/>
        
        
        



    </LinearLayout>


</LinearLayout> <!-- fin layout general -->