<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
     android:background="#000000" >

    <include
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        layout="@layout/action_bar" />
    <ScrollView
    	android:layout_width="match_parent"
    	android:layout_height="match_parent" >
	
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bt_border_off"
        android:gravity="center|center_horizontal"
        android:orientation="vertical" 
        android:padding="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bt_border_off"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingLeft="15dp" >

                    <TextView
                        android:id="@+id/tvRoundTitre"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:text="@string/mod_info_1"
                        android:textColor="@color/color_bleu" />
                    <TextView
                        android:id="@+id/tvRoundObjectif"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:text="@string/mod_info_2"
                        android:textColor="@color/color_bleu" />

                </LinearLayout>

                

            </LinearLayout>
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bt_border_off"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@+id/btModLeft"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/mod_bt_left" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/tvModTitre"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="TextView"
                        android:textColor="@color/color_jaune" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@+id/btModRight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/mod_bt_right" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llModImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/iv_border_off"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/ivMod"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/multi_hack_common_medium" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/bt_border_off" >
                <TextView
                    android:id="@+id/tvModFreq"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mod_freq"
                    android:textColor="@color/color_bleu" />

                <TextView
                    android:id="@+id/tvModInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mod_info"
                    android:textColor="@color/color_bleu" />
                <TextView
                    android:id="@+id/tvModAbsorption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mod_absorption"
                    android:textColor="@color/color_bleu" />
                <TextView
                    android:id="@+id/tvModRange"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mod_range"
                    android:textColor="@color/color_bleu" />
                <TextView
                    android:id="@+id/tvModCooldown"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mod_cooldown"
                    android:textColor="@color/color_bleu" />
                <TextView
                    android:id="@+id/tvModHack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mod_hack"
                    android:textColor="@color/color_bleu" />
                <TextView
                    android:id="@+id/tvModForceAmp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mod_force_amp"
                    android:textColor="@color/color_bleu" />
                <TextView
                    android:id="@+id/tvModTurret"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mod_turret"
                    android:textColor="@color/color_bleu" />

                <TextView
                    android:id="@+id/tvModCost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mod_cost"
                    android:textColor="@color/color_bleu" />
                <TextView
                    android:id="@+id/tvModRecycle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mod_recycle"
                    android:textColor="@color/color_bleu" />

                

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
	</ScrollView>
</LinearLayout> <!-- fin layout general -->