<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
     android:background="#000000" >

    <include
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        layout="@layout/action_bar" />
	
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bt_border_off"
        android:gravity="center|center_horizontal"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bt_border_off"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/tvKeyTitre"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/key_titre"
                        android:textColor="@color/color_jaune" />

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/llKeyImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/iv_border_off"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/ivKey"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/key_medium" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/bt_border_off" >

                <TextView
                    android:id="@+id/tvKeyInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/key_info"
                    android:textColor="@color/color_bleu" />

                <TextView
                    android:id="@+id/tvKeyRecycle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/key_recycle"
                    android:textColor="@color/color_bleu" />
                
                <TextView
                    android:id="@+id/tvKeyPortal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/key_portal"
                    android:textColor="@color/color_bleu" />
                <TextView
                    android:id="@+id/tvKeyPhoto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/key_photo"
                    android:textColor="@color/color_bleu" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout> <!-- fin layout general -->